force-app/main/default/objects/Atrasos_Omni__c/Atrasos_Omni__c.object-meta.xml
<CustomObject>
    <label>Atrasos Omni</label>
    <nameField>
        <label>Descrição</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Atrasos Omni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>