force-app/main/default/objects/Atrasos_Omni__c/fields/Codigo_Atraso__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Atraso__c</fullName>
    <label>Código Atraso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>