force-app/main/default/objects/Atrasos_Omni__c/fields/Grupo__c.field-meta.xml
<CustomField>
    <fullName>Grupo__c</fullName>
    <label>Grupo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>INFRAESTRUTURA</fullName>
            </value>
            <value>
                <fullName>METEREOLOGIA</fullName>
            </value>
            <value>
                <fullName>OMNI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>