force-app/main/default/objects/Atrasos_Omni__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>METEREOLOGIA</fullName>
            </value>
            <value>
                <fullName>OPERACIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>