force-app/main/default/objects/Atrasos_Omni__c/fields/Orientacao__c.field-meta.xml
<CustomField>
    <fullName>Orientacao__c</fullName>
    <label>Orientação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>