force-app/main/default/objects/Atrasos_Omni__c/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <label>Setor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Grupo__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AEROPORTO</fullName>
            </value>
            <value>
                <fullName>ATENDIMENTO</fullName>
            </value>
            <value>
                <fullName>CLIENTE</fullName>
            </value>
            <value>
                <fullName>COMERCIAL</fullName>
            </value>
            <value>
                <fullName>CONTROLE DE VOO</fullName>
            </value>
            <value>
                <fullName>COORDENAÇÃO</fullName>
            </value>
            <value>
                <fullName>FORNECEDOR QAV</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO</fullName>
            </value>
            <value>
                <fullName>METEREOLOGIA</fullName>
            </value>
            <value>
                <fullName>REBOQUE</fullName>
            </value>
            <value>
                <fullName>TI</fullName>
            </value>
            <value>
                <fullName>TRIPULAÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>