force-app/main/default/objects/Atrasos_Omni__c/fields/Sub_Setor__c.field-meta.xml
<CustomField>
    <fullName>Sub_Setor__c</fullName>
    <label>Sub-Setor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Setor__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>DOCUMENTAÇÃO DO VOO</fullName>
            </value>
            <value>
                <fullName>INDISP AERONAVE</fullName>
            </value>
            <value>
                <fullName>VIA DE SERVIÇO CONGESTIONADA</fullName>
            </value>
            <value>
                <fullName>CONTROLE AÉREO</fullName>
            </value>
            <value>
                <fullName>FALTA DE ENERGIA</fullName>
            </value>
            <value>
                <fullName>RADAR</fullName>
            </value>
            <value>
                <fullName>SECURITY</fullName>
            </value>
            <value>
                <fullName>SALA DE EMBARQUE</fullName>
            </value>
            <value>
                <fullName>EXCESSO DE VOO</fullName>
            </value>
            <value>
                <fullName>BRIEFING</fullName>
            </value>
            <value>
                <fullName>BALCÃO DE CHECKIN</fullName>
            </value>
            <value>
                <fullName>VAN / ÔNIBUS</fullName>
            </value>
            <value>
                <fullName>LEITURA HUMS</fullName>
            </value>
            <value>
                <fullName>GPU INOP</fullName>
            </value>
            <value>
                <fullName>TRATOR INOP</fullName>
            </value>
            <value>
                <fullName>CONFIGURAÇÃO AERONAVE</fullName>
            </value>
            <value>
                <fullName>AG. EQUIPAMENTO</fullName>
            </value>
            <value>
                <fullName>METEREOLOGIA NA UNIDADE</fullName>
            </value>
            <value>
                <fullName>METEROLOGIA NO AEROPORTO</fullName>
            </value>
            <value>
                <fullName>PROGRAMAÇÃO ANTERIOR</fullName>
            </value>
            <value>
                <fullName>OUTRA EMPRESA</fullName>
            </value>
            <value>
                <fullName>VISTORIA</fullName>
            </value>
            <value>
                <fullName>MUDANÇA PREFIXO</fullName>
            </value>
            <value>
                <fullName>MUDANÇA PROGRAMAÇÃO</fullName>
            </value>
            <value>
                <fullName>WEATHER REPORT</fullName>
            </value>
            <value>
                <fullName>MÉDICO / SAÚDE</fullName>
            </value>
            <value>
                <fullName>HELIPONTO</fullName>
            </value>
            <value>
                <fullName>INCLUSÃO / EXCLUSÃO DE PAX / POUSO</fullName>
            </value>
            <value>
                <fullName>UNIDADE</fullName>
            </value>
            <value>
                <fullName>SISTEMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>