force-app/main/default/objects/Atrasos_Omni__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grupo__c</columns>
    <columns>Motivo__c</columns>
    <columns>Setor__c</columns>
    <columns>Sub_Setor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>